# qpc_bg431

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  llvm.ld
CubeMX/: .mxproject  CubeMX.ioc  STM32G431CBTx_FLASH.ld
CubeMX/Core/Inc/: stm32g4xx_it.h
CubeMX/Core/Src/: main.c  stm32g4xx_hal_timebase_tim.c  stm32g4xx_it.c
app/qpc_adapter/: qpc_app.h
app/qpc_adapter/qk/: bsp.c
src/: main.c  main.h
src/test/: CMakeLists.txt
src/test/host/: ut_source.c
